# convert_mnemonic

./: CMakeLists.txt  README.md  convert_mnemonic.py
src/: CMakeLists.txt  cx_ec.c  cx_hash.h  cx_hmac.c  cx_sha512.c  emu_cx_hash.c  emu_os_bip32.h  emulate.h  test_algorand.c
